# python-tools

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  README.rst  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: conf.py  index.rst  javascript.html  postgresql_roles.txt  release.html  sample.md
docs/refer/: f1.txt  f2.txt  f3.txt  f4.txt  g1.txt  g2.txt  g3.txt
lib/db/: MySQL.py
lib/utils/: utils.py
mongodb-data/: sample-data-01.md
sample/: data.py  downlod.py  web-automation.py
src/: Person.py
src/python_tools/: __init__.py  app.py  requirements.txt  skeleton.py
src/python_tools/ai/: cli_chat.py
src/python_tools/alembic/: env.py
src/python_tools/data/: json-data.json  test.db
src/python_tools/db/: app_model.py  db_connection.py  dump-and-sync.py  last_run.py  last_run_curd.py
src/python_tools/decarator/: repeter.py  repeter_function.py
src/python_tools/fastapi/: dataclass_with_json.py  fast_thread.py  html2pdf.py  long_html_file.html  playwright-html2pdf.py  pyp-html2pdf.py  (+4 more)
tests/: conftest.py  sample.txt  test_app.py  test_skeleton.py
tests/pytest_samples/: test_calc.py  test_load_data.py  test_main.py  test_order.py  test_sample_examples.py  test_shopping_cart.py
tests/samples/: test_get_total.py  test_remove_files.py  test_string_compare.py
tests/snow/: test_find_change.py
tests/utils/: test_app_start.py
web_read/: decode_b64.py  get-patta.py  read_website.py
(+104 files in other folders)
